# acl-engine-r

./: .gitignore  Cargo.toml  README.md  acl-example.yaml  acl-o.yaml  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-01-28-performance-optimization-design.md  2026-01-30-async-outbound.md  2026-02-28-high-priority-optimizations.md
src/: compile.rs  error.rs  lib.rs  parser.rs  types.rs
src/geo/: auto_loader.rs  format.rs  loader.rs  mod.rs
src/geo/dat/: geodat.proto  mod.rs
src/geo/metadb/: mod.rs
src/geo/mmdb/: mod.rs
src/geo/singsite/: mod.rs
src/matcher/: domain_simple.rs  geoip.rs  geosite.rs  ip.rs  mod.rs
src/matcher/domain/: matcher.rs  mod.rs  succinct.rs
src/outbound/: direct.rs  http.rs  mod.rs  reject.rs  socks5.rs
src/resolver/: mod.rs
src/router/: mod.rs
tests/: domain_matcher_tests.rs  geo_tests.rs
