[package]
name = "acl-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A high-performance Access Control List (ACL) engine for Rust"
repository = "https://github.com/xflash-panda/acl-engine-r"
keywords = ["acl", "proxy", "routing", "geoip", "geosite"]
categories = ["network-programming"]

[dependencies]
# IP/CIDR handling
ipnet = "2.9"

# LRU cache
lru = "0.12"

# Regex for rule parsing and domain matching
regex = "1.10"

# Error handling
thiserror = "1.0"

# MaxMind GeoIP database
maxminddb = "0.24"

# Protobuf for V2Ray geodata format
prost = "0.13"

# Lazy initialization
once_cell = "1.19"

# Logging
log = "0.4"

# Serialization (for maxminddb)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for auto-download
ureq = "2.9"

# Socket control for bind IP
socket2 = "0.6"

# Base64 encoding for HTTP proxy auth
base64 = "0.22"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
# For testing
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["geoip", "geosite"]
geoip = []
geosite = []
